[gd_scene load_steps=2 format=3 uid="uid://cyb4wc8h8yx5v"]

[ext_resource type="Script" path="res://Script/UI/HeartRateUI.gd" id="1_heart_rate_ui"]

[node name="HeartRateUI" type="CanvasLayer"]
script = ExtResource("1_heart_rate_ui")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -120.0
offset_right = 250.0
grow_vertical = 0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HeartRateLabel" type="Label" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.8, 0.3, 1)
theme_override_font_sizes/font_size = 24
text = "60 BPM"

[node name="Waveform" type="Line2D" parent="Control/MarginContainer/VBoxContainer"]
width = 2.0
default_color = Color(0.2, 0.8, 0.3, 1)
antialiased = true

[node name="StressIndicator" type="ColorRect" parent="Control/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 5)
layout_mode = 2
color = Color(0.2, 0.8, 0.3, 1)
